# siesta

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  tbb_with_asio.txt  yamltojson.py
cmake/: SiestaGenerate.cmake  siesta.cmake.in
echo/: CMakeLists.txt
echo/test/: README.md  run.sh  test_server.cpp
generator/: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  main.cpp  nghttp2.cpp  openapi2.cpp  openapi2.hpp  openapi2_print.cpp  util.hpp
generator-rpc/: CMakeLists.txt
generator-rpc/src/Backend/Mock/: MockBackend.hpp
generator-rpc/src/Driver/: Driver.cpp  Driver.hpp  main.cpp
generator-rpc/src/Frontend/OpenRPC/: openrpc.hpp
generator-rpc/src/IR/: RPCIR.hpp
generator-rpc/test/: petstore.json
generator/beast/: beast.cpp  beast.hpp  beast_client.cpp  beast_server.cpp
generator/src/: codegen_base.hpp  codegen_client.cpp  codegen_client.hpp  codegen_defs.cpp  codegen_defs.hpp  codegen_python.cpp  codegen_python.hpp  codegen_server.cpp  codegen_server.hpp  codegen_server_python.cpp  codegen_server_python.hpp  dependency_graph.cpp  dependency_graph.hpp  endpoint_ir.cpp  endpoint_ir.hpp  endpoint_util.hpp  main.cpp  openapi.cpp  openapi.hpp  openapi2.cpp  openapi2.hpp  openapi2_print.cpp  openapi3.cpp  openapi3.hpp  openapi3_codegen.cpp  openapi3_codegen.hpp  openapi3_print.cpp  schema_ast.cpp  schema_ast.hpp  schema_parser.cpp  schema_parser.hpp  util.cpp  util.hpp
generator/src/Backend/Beast/: BeastClientGen.cpp  BeastClientGen.hpp  BeastPythonGen.cpp  BeastPythonGen.hpp  BeastServerGen.cpp  BeastServerGen.hpp  BeastServerPythonGen.cpp  BeastServerPythonGen.hpp
generator/src/Driver/: Driver.cpp  Driver.hpp  main.cpp
generator/src/Frontend/: AST.cpp  SchemaParser.cpp  SchemaParser.hpp  openapi.cpp  openapi.hpp  openapi3.cpp  openapi3.hpp
generator/src/IR/: CodegenArgs.hpp  DefsGenerator.cpp  DefsGenerator.hpp  DependencyGraph.cpp  DependencyGraph.hpp  EndpointIR.cpp  EndpointIR.hpp
generator/src/Support/: Filenames.hpp  Utils.cpp
generator/src/beast/: beast.cpp  beast.hpp  beast_client.cpp  beast_server.cpp  codegen_client.cpp  codegen_client.hpp  codegen_python.cpp  codegen_python.hpp  codegen_server.cpp  codegen_server.hpp  codegen_server_python.cpp  codegen_server_python.hpp
generator/src/beast/v2/: beastv2.hpp  client.cpp  server.cpp
generator/src/beast/v3/: beastv3.hpp  client.cpp  server.cpp
include/: openapi2.hpp
include/siesta/: encoding.hpp  format.hpp  json_body.hpp  path_tree.hpp  simdjson_overlay.hpp  tokenized_string.hpp
include/siesta/asio/: condition_variable.hpp  queue.hpp  semaphore.hpp
include/siesta/asio/detail/: wait_op.hpp
include/siesta/beast/: client.hpp  error.hpp  format.hpp  python_util.hpp  server.hpp
jsonschema/: CMakeLists.txt  main.cpp
jsonschema/src/: schema_types.cpp  schema_types.hpp
output/: CMakeLists.txt  client.cpp  echo_client.hpp  echo_defs.cpp  echo_defs.hpp  echo_server.cpp  echo_server.hpp  server.cpp
src/: beast.cpp  beauty.cpp  main.cpp  nghttp2.cpp  openapi2.cpp  openapi2_print.cpp  printer.cpp  printer.hpp  util.cpp
src/beast/: client.cpp  error.cpp  server.cpp
tests/: CMakeLists.txt  README.md  binance.json  echo.json  openai.json
tests/binance/: CMakeLists.txt  compile_test.cpp
tests/echo/: CMakeLists.txt  README.md  run.sh  test_client.cpp  test_client.py  test_server.cpp
tests/echo/load_test/: load_test.py  run.sh
tests/openai/: CMakeLists.txt  compile_test.cpp
tests/siesta/: path_tree.t.cpp
tests/siesta/asio/: queue.t.cpp
