cmake_minimum_required(VERSION 3.31)
project(echo LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(SIESTA_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/.." CACHE PATH "")
find_package(Boost 1.83 REQUIRED COMPONENTS system json)
find_package(Python 3.10 REQUIRED COMPONENTS Interpreter Development)
find_package(nanobind 2.12 REQUIRED)
add_library(siesta STATIC IMPORTED)
set_target_properties(siesta PROPERTIES IMPORTED_LOCATION "${SIESTA_ROOT}/build/libsiesta.a")
add_library(echo_defs STATIC openapi_defs.cpp)
target_include_directories(echo_defs PUBLIC . "${SIESTA_ROOT}/include" "${SIESTA_ROOT}/generator/src")
target_link_libraries(echo_defs PUBLIC Boost::json Boost::system siesta)
nanobind_add_module(siesta_client py_module.cpp)
target_compile_definitions(siesta_client PRIVATE NB_DOMAIN=siesta)
target_include_directories(siesta_client PRIVATE . "${SIESTA_ROOT}/include" "${SIESTA_ROOT}/generator/src")
target_link_libraries(siesta_client PRIVATE echo_defs Boost::json Boost::system siesta)
nanobind_add_module(siesta_server server_py.cpp server.cpp)
target_compile_definitions(siesta_server PRIVATE NB_DOMAIN=siesta)
target_include_directories(siesta_server PRIVATE . "${SIESTA_ROOT}/include" "${SIESTA_ROOT}/generator/src")
target_link_libraries(siesta_server PRIVATE echo_defs Boost::json Boost::system siesta)
